--- a/csscheatsheet/css/style.css
+++ b/csscheatsheet/css/style.css
@@ -85,3 +85,12 @@ body{
     margin: 20 px 0;
 }
 
+.box-1 h1{
+    font-family: Tahoma;
+    font-weight: 800;
+    font-style: italic;
+    text-decoration: underline;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    word-spacing: 1em;
+}
