--- a/mywebsite/CSS/styles.css
+++ b/mywebsite/CSS/styles.css
@@ -33,14 +33,14 @@ body{
 }
 
 #navbar a{
-    color: white;
+    color: #fff;
     text-decoration: none;
     font-size: 18px;
     padding-right: 15px;
 }
 
 #showcase{
-    background-image: url('../images/showcase.jpg');
+    background-image: url('../Images/showcase.jpeg');
     background-position: center right;
     min-height: 300px;
     margin-bottom: 30px;
@@ -76,4 +76,15 @@ body{
     text-align: center;
     padding: 20px;
     margin-top: 40px;
+}
+
+@media(max-width: 600px){
+    #main{
+        width: 100%;
+        float: none;
+    }
+    #sidebar{
+        width: 100%;
+        float: none;
+    }
 }
